Add a new benchmark to measure impact zgc in comparison to parallel GC
* Add explicit flushing
* update hikariCP settings in hikari cp
* Update majavat templates to use each